<resources>
    <string name="app_name">ComputerMaintenance</string>
    <string name="button_register">REGISTER</string>
    <string name="button_signin">SIGN IN</string>
    <string name="button_aboutus">ABOUT US</string>
    <string name="button_quickcomplaint">QUICK COMPLAINT</string>
    <string name="button_faqs">FAQs</string>
    <string name="Text_Quote">Tech To Your Home</string>
    <string name="appname">TECH_ONLINE</string>
    <string name="textview_Name">Name</string>
    <string name="textview_Password">Create Password</string>
    <string name="textview_confirmPassword">Confirm Password</string>
    <string name="button_sendOTP">Send Verification Code</string>
    <string name="textview_mobileNumber">Mobile Number</string>
    <string name="textview_errorMsg">Password Mismatch</string>
    <string name="textview_enterPassword">Enter Password</string>
</resources>
